bootstrap task add

--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
           <a href="./htmltasks/Form.html">Task 3 link</a>
         </td>
       </tr>
+      <tr>
+        <td>Task 3</td>
+        <td>
+          <a href="./bootstraptasks/task2.html">Task 3 link</a>
+        </td>
+      </tr>
     </table>
   </body>
 </html>
